--- a/templates/challenge_phase_1_description.html
+++ b/templates/challenge_phase_1_description.html
@@ -2,7 +2,7 @@
 
 <p>The Development Phase of the DRL for Real competition is designed to allow participants to develop and refine their disentangled representation learning methods using the provided training datasets. This phase focuses on model development, experimentation, and validation.</p>
 
-<p>This phase runs from January 15, 2025 to August 15, 2025, providing participants with seven months to develop robust disentangled representation learning methods.</p>
+<p>This phase runs from May 31, 2025 to June 23, 2025, 23:59:59 AOE, providing participants with time to develop robust disentangled representation learning methods.</p>
 
 <h3>Development Phase Details:</h3>
 
