--- a/templates/submission_guidelines.html
+++ b/templates/submission_guidelines.html
@@ -70,10 +70,11 @@
 <h3>Important Dates</h3>
 
 <ul>
-  <li><strong>May 25, 2025:</strong> Competition Announcement and Dataset Release</li>
-  <li><strong>June 25, 2025:</strong> Competition Submission Deadline</li>
-  <li><strong>July 1, 2025:</strong> Notification of Competition Results</li>
-  <li><strong>October 2025:</strong> Workshop and Competition Results Presentation at ICCV 2025 in Hawaii</li>
+  <li><strong>May 31, 2025, 23:59:59 AOE:</strong> Workshop Announcement and Training & Validation Dataset Release</li>
+  <li><strong>June 23, 2025, 23:59:59 AOE:</strong> Final Test Dataset Release</li>
+  <li><strong>June 30, 2025, 23:59:59 AOE:</strong> Competition Submission Deadline</li>
+  <li><strong>July 3, 2025, 23:59:59 AOE:</strong> Notification of Competition Results</li>
+  <li><strong>October 19, 2025:</strong> Workshop and Competition Results Presentation at ICCV 2025 in Hawaii</li>
 </ul>
 
 <h3>Paper Submission</h3>
@@ -81,9 +82,10 @@
 <p>In addition to the competition, we are also accepting paper submissions related to disentangled representation learning. Accepted papers will be included in the ICCV 2025 proceedings. Important dates for paper submission:</p>
 
 <ul>
-  <li><strong>June 30, 2025:</strong> Paper Submission Deadline</li>
-  <li><strong>July 10, 2025:</strong> Notification of Paper Acceptance</li>
-  <li><strong>August 15, 2025:</strong> Final Documents Submission to ICCV</li>
+  <li><strong>June 28, 2025, 23:59:59 AOE:</strong> Workshop Paper Deadline</li>
+  <li><strong>July 7, 2025, 23:59:59 AOE:</strong> Challenge Paper Deadline</li>
+  <li><strong>July 11, 2025, 23:59:59 AOE:</strong> Notification of Paper Acceptance</li>
+  <li><strong>August 15, 2025, 23:59:59 AOE:</strong> Camera Ready Paper Deadline</li>
 </ul>
 
 <p>The top three teams from each leaderboard will be invited to present their approaches at the workshop in Hawaii, providing an opportunity to share detailed insights about their methods with the research community.</p>
